Add comprehensive travel booking platform with Firebase integration, payment processing, and hotel/flight search functionality

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "firebase": "^12.2.1",
+    "iyzipay": "^2.0.64",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
